remove deprecated jvm options